syntax = "proto3";

package drug;
option go_package = "moh/internal/gen;gapi";

import "google/protobuf/wrappers.proto";

// -------- DrugOut mirrors your read DTO (IDs + names + countries) --------
message DrugOut {
  int64 id           = 1;
  string brand_name  = 2;
  string dose        = 3;

  int64 api_id       = 4;
  string api_name    = 5;

  int64 dosage_id    = 6;
  string dosage_name = 7;

  int64 route_id     = 8;
  string route_name  = 9;

  int64 strength_id    = 10;
  string strength_name = 11;

  google.protobuf.Int64Value  authority_holder_id      = 12;
  google.protobuf.StringValue authority_holder_name    = 13;
  google.protobuf.StringValue authority_holder_country = 14;

  google.protobuf.Int64Value  manufacturing_site_id      = 15;
  google.protobuf.StringValue manufacturing_site_name    = 16;
  google.protobuf.StringValue manufacturing_site_country = 17;

  google.protobuf.Int64Value  marketing_id      = 18;
  google.protobuf.StringValue marketing_name    = 19;
  google.protobuf.StringValue marketing_country = 20;
}

// Return type: just confirmation + message
message ConfirmMessage {
  bool confirmation = 1;
  string message    = 2;
}

// You will call this on another service.
service ExecsService {
  rpc AddDrug    (DrugOut) returns (ConfirmMessage);
  rpc UpdateDrug (DrugOut) returns (ConfirmMessage);
}
